<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_ui_button_text"
            android:id="@+id/refresh_ui_button" android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
            android:onClick="refreshUI"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_log_button_text"
            android:id="@+id/clear_log_button" android:layout_below="@+id/refresh_ui_button"
            android:layout_alignParentStart="true" android:layout_alignEnd="@+id/refresh_ui_button"
            android:onClick="clearLog"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_datachanged_button_text"
            android:id="@+id/call_datachanged" android:layout_below="@+id/clear_log_button"
            android:layout_alignParentStart="true" android:layout_alignParentEnd="true"
            android:onClick="callDatachanged"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/call_datachanged"
            android:layout_alignParentStart="true" android:id="@+id/db_size_wrapper">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_locations_text"
                android:id="@+id/textView"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/locations_amount_text" android:layout_weight="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stuff_number_text"
                android:id="@+id/textView2"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/stuffs_amount_text" android:layout_weight="1"/>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perform_timing_tests_button_text"
            android:id="@+id/perform_timing_tests" android:layout_below="@+id/db_size_wrapper"
            android:layout_alignParentStart="true" android:layout_alignEnd="@+id/call_datachanged"
            android:onClick="performTimingTests"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/populate_db_button_text"
            android:id="@+id/populate_db_button" android:layout_below="@+id/perform_timing_tests"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/perform_timing_tests" android:onClick="populateDb"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perform_restore_button_text"
            android:id="@+id/perform_restore_button" android:layout_below="@+id/populate_db_button"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/populate_db_button" android:onClick="performRestore"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_locations_text"
            android:id="@+id/textView3" android:layout_below="@+id/perform_restore_button"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stats_locations_number_text" android:layout_below="@+id/perform_restore_button"
            android:layout_toEndOf="@+id/textView3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_num_stuffs_text"
            android:id="@+id/textView4" android:layout_below="@+id/perform_restore_button"
            android:layout_toEndOf="@+id/stats_locations_number_text"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stats_stuffs_number_text" android:layout_below="@+id/perform_restore_button"
            android:layout_toEndOf="@+id/textView4"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/database_hash_text"
            android:id="@+id/textView5" android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stats_database_hash" android:layout_below="@+id/textView4"
            android:layout_toEndOf="@+id/textView5" android:singleLine="true"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/perform_restore_button"
            android:layout_alignParentBottom="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/log_text"/>
    </ScrollView>
</RelativeLayout>
